[gd_scene load_steps=3 format=2]

[ext_resource path="res://book/red.png" type="Texture" id=1]
[ext_resource path="res://art/Map/1lv_object/book2.gd" type="Script" id=2]

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -76.8539, -28.1493, -74.2052, 10.5211, -26.6816, 74.5797, 83.125, 46.0131, 79.4169, 20.586, -0.0428162, -64.1711 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -2.02802, 0.529739 )
polygon = PoolVector2Array( -2.78238, -62.0522, -74.8259, -21.7926, -70.588, 25.8833, -22.1867, 76.078, 85.153, 50.7807, 77.7368, 14.2292, 49.7321, -12.3221 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
